styles.css
/* ... */
.modal__links {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.modal__link {
  color: #1a202c;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.5;
  margin: 8px 0;
  padding-bottom: 4px;
  border-bottom: 2px solid transparent;
}

.modal__link--primary {
  color: #f7fafc;
  padding: 12px 32px;
  background: #6415ff;
  border-radius: 500px;
  border: none;
}

.menu--open .modal {
  visibility: visible;
  opacity: 1;
  transform: translateX(0);
}

.btn__menu--close {
  position: fixed;
  top: 24px;
  right: 18px;
}

/* 

HEADER / ABOUT US ↓

*/

/* .container__aboutme {
  margin:0
} */

#landing {
  padding:0;
}

header .row {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.title__black {
  color: #242424;
}

.aboutme__title {
  font-size: 48px;
  font-weight: 700;
  margin-bottom: 24px;
  width: 100%;
  padding: 0;
}

.aboutme__left {
  display: flex;
  flex-direction: column;
  width: 40%;
  justify-content: center;
  align-items: start;
  margin-right: 24px;
  /* border: 2px dashed; */
}
.aboutme__right {
  display: flex;
  flex-direction: column;
  width: 60%;
  margin-left: 12px;
}
.aboutme__trustees--para {
  font-size: 18px;
  margin-bottom: 32px;
  line-height: 1.5;
}
.aboutme__trustees--img {
  width: 100%;
  opacity: 0.5;
}

.aboutme__trustees--title {
  margin-bottom: 24px;
  font-size: 0.75rem;
  color: rgb(160 174 192);
  opacity: 1;
}

.email__form {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  /* max-width: 480px; */
  border: 1px solid #cbd5e0;
  border-radius: 9999px;
  padding: 8px;
  margin-bottom: 56px;
  transition: all 200ms ease;
  cursor: text;
}

.email__input {
  flex: 1;
  border: none;
  outline: none;
  padding: 16px 20px;
  font-size: 16px;
  border-radius: 999px;
  width: 100%;
}

.email__input::placeholder {
  color: rgb(226, 232, 240);
  font-weight: 500;
}

.email__btn--anchor,
.quality__btn {
  border: none;
  background-color: #6415ff;
  color: white;
  padding: 16px;
  /* margin: 8px 8px 8px 0; */
  text-decoration: none;
  text-align: center;
  border-radius: 999px;
  font-weight: bold;
  font-size: 16px;
  min-width: 160px;
  /* width: 100%; */
  height: 52px;
  cursor: pointer;
  transition: all 200ms ease;
}

.quality__btn:hover .email__btn:hover,
.quality__btn:hover,
.email__btn--anchor:hover {
  background-color: #5011cc;
}
.email__form:hover {
  border-color: #242424a1;
}
/* 

FEATURES ↓

*/

#features {
  position: relative;
  /* border: 3px solid green; */
}

#features .row__narrow {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* border: 2px solid red; */
}

.features__title {
  font-size: 48px;
  margin: 16px;
}

.features__para {
  max-width: 55%;
  /* margin: 12px; */
  text-align: center;
  font-size: 18px;
  color: #7c8ba1;
  line-height: 1.625;
  font-weight: 500;
}

.services {
  display: flex;
  flex-wrap: wrap;
  margin-top: 36px;
}

.service {
  display: flex;
  width: calc(100% / 3);
  justify-content: space-between;
  padding: 16px 0 32px 0;
}

.service__logo--circle {
  border: 1px solid rgb(226, 232, 240);
  padding: 20px;
  border-radius: 50%;
}

.service__description {
  margin: 8px 0 0 16px;
}

.service__description--title {
  font-weight: 700;
  margin-bottom: 16px;
}

.service__description--para {
  line-height: 2;
  font-weight: 500;
  color: #7c8ba1;
}
/* 

QUALITY WORK ↓

*/

#quality .row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  /* border: 3px dashed; */
}
#quality {
  padding: 0;
}
.quality__left {
  width: 50%;
  max-width: 600px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  /* padding: 40px; */
  /* margin-bottom: 80px; */
}

.quality__right {
  width: 50%;
}

.quality__img {
  width: 100%;
  border: 1px solid rgba(226, 232, 240, 1);
  border-radius: 0.25rem;
}

.quality__title {
  font-size: 48px;
  padding: 0;
  margin-top: 16px;
  width: 90%;
}

.quality__para {
  line-height: 1.625;
  margin-top: 16px;
  color: rgb(124, 139, 161);
  font-weight: 500;
  font-size: 18px;
  width: 90%;
}

.quality__btn {
  width: 150px;
  margin-top: 32px;
  padding: 12px 32px;
  font-size: 14px;
}

/* 

STEPS ↓

*/

#steps .row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 1200px;
  width: 100%;
  gap: 56px;
}

.steps__right {
  margin-left: 16px;
  width: 50%;
}

.steps__left {
  width: 50%;
}

.steps__left--img {
  width: 100%;
}

.steps__title {
  font-size: 48px;
  padding: 0;
  margin: 24px 0;
  width: 100%;
  text-wrap: wrap;
}

.steps {
  display: flex;
  flex-direction: column;
}

.grey {
  font-size: 40px;
  align-items: start;
  font-weight: 600;
  /* padding: 0 40px 40px 40px; */
  color: rgb(203 213 224);
}

.step {
  display: flex;
  margin-top: 32px;
}

.step__words {
  max-width: 320px;
  margin-left: 24px;
}

.steps__para {
  margin-top: 12px;
  color: #718096;
  font-weight: 500;
  font-size: 14px;
}

/* 

VALUES ↓

*/

#values .row {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.values__left {
  width: 50%;
  padding-top: 2rem;
  padding-bottom: 2rem;
  max-width: 576px;
  /* font-size: 18px; */
}

.values__right {
  width: 50%;
}

.values__title {
  font-size: 48px;
  margin-top: 16px;
  padding: 0;
}

.values__left--affordable {
  display: flex;
  flex-direction: column;
}

.logo__red {
  background-color: rgb(254 178 178);
  border-radius: 50%;
  padding: 8px;
  color: rgb(155 44 44);
}

.logo__green {
  background-color: rgb(154 230 180);
  color: rgb(39 103 73);
  border-radius: 50%;
  padding: 8px;
}

.values__bottom {
  display: flex;
}

.values__left--principle-title {
  display: flex;
  align-items: center;
  gap: 12px;
}

.values__principle-text {
  font-size: 20px;
  letter-spacing: 1%;
}

.values__left--principle {
  display: flex;
  flex-direction: column;
  width: 50%;
  margin: 36px 36px 0 0;
}
/* ... */

